--- a/localization/kor/AigisMod-Character-Strings.json
+++ b/localization/kor/AigisMod-Character-Strings.json
@@ -5,7 +5,7 @@
       "왕자"
     ],
     "TEXT": [
-      "영걸의 탑에서 수련하던 중, 기묘한 일이 벌어졌다. NL 왕자와 그의 동료들은 지금, 첨탑이라 불리는 장소를 탐색하고 있다.",
+      "영걸의 탑에서 수련하던 중 기묘한 일이 벌어졌다. NL 왕자와 그의 동료들은 지금, 첨탑이라 불리는 장소를 탐색하고 있다.",
       "당신은 동료들에게 심장을 공격하라 명하고...",
       "불빛이 사라진 거리를 걷던 중, 당신은 어둠의 의식을 행하는 NL 다수의 두건 쓴 사람들을 목격한다. 당신이 접근하자, 그들은 일제히 당신을 돌아보았다. NL 무리 중 가장 장신인 이가 송곳니를 드러내며, 길고 창백한 손을 당신에게 뻗는다. NL '왕자여, 우리와 함께하여 첨탑의 온기를 느껴봅시다.' "
     ]
