--- a/localization/kor/AigisMod-Event-Strings.json
+++ b/localization/kor/AigisMod-Event-Strings.json
@@ -41,12 +41,12 @@
       "제국군은 왕국군과의 합류지점에 도착했습니다. NL 원정 재개까지 시간이 남았기에 병력을 강화할 수 있을 것입니다.",
       "당신은 부대를 재편성하기로 했습니다.",
       "당신은 휘하 부대들과 훈련하기로 했습니다.",
-      "당신은 새로운 힘에 눈뜨기 위해 전투를 결심합니다."
+      "당신은 전투를 마치고 새로운 힘을 얻었습니다."
     ],
     "OPTIONS": [
       "[재편성] #g덱에 #g새로운 #g카드를 #g추가합니다.",
       "[훈련] #g카드를 #g업그레이드합니다.",
-      "[전투] #r왕국군과 #r전투합니다.",
+      "[전투] #r왕국군과 #g훈련합니다.",
       "[떠난다]",
       "[잠김] 업그레이드할 카드가 없습니다.",
       "업그레이드할 카드를 고르십시오.",
