--- a/localization/kor/AigisMod-Character-Strings.json
+++ b/localization/kor/AigisMod-Character-Strings.json
@@ -27,7 +27,7 @@
       "복수자"
     ],
     "TEXT": [
-      "빈센트는 가족을 지키지 못한 것에 대한 속죄의 여행을 하고 있다. NL 이제 첨탑을 등반하게 되었고, 그는 더 이상 혼자가 아니다.",
+      "빈센트는 가족을 지키지 못한 것에 대한 속죄의 여행을 하고 있다. NL 첨탑을 등반하게 된 그는, 더 이상 혼자가 아니다.",
       "당신은 심장을 향한 비장의 카드를 준비하고...",
       "불빛이 사라진 거리를 걷던 중, 당신은 어둠의 의식을 행하는 NL 다수의 두건 쓴 사람들을 목격한다. 당신이 접근하자, 그들은 일제히 당신을 돌아보았다. NL 무리 중 가장 장신인 이가 송곳니를 드러내며, 길고 창백한 손을 당신에게 뻗는다. NL '사냥꾼이여, 우리와 함께하여 첨탑의 온기를 느껴봅시다.' "
     ]
