--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -1490,8 +1490,8 @@
   },
   "aigisMod:Friede": {
     "NAME": "후리데",
-    "DESCRIPTION": "!D! aigismod:스플래시 데미지를 가합니다. NL 방어도를 적의 수 X !B! 만큼 얻습니다.",
-    "UPGRADE_DESCRIPTION": "!D! aigismod:스플래시 데미지를 가합니다. NL 방어도를 적의 수 X !B! 만큼 얻습니다.",
+    "DESCRIPTION": "!D! aigismod:스플래시 데미지를 가합니다. NL 방어도를 적의 수 x !B! 만큼 얻습니다.",
+    "UPGRADE_DESCRIPTION": "!D! aigismod:스플래시 데미지를 가합니다. NL 방어도를 적의 수 x !B! 만큼 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
       "제국 중장포병"
     ]
@@ -1706,11 +1706,11 @@
   },
   "aigisMod:Malebranche": {
     "NAME": "말레브랑케",
-    "DESCRIPTION": "모든 적에게 !D! 데미지를 가합니다. NL 전투당 한 번, 체력을 적 숫자 X !M! 만큼 회복합니다.",
-    "UPGRADE_DESCRIPTION": "모든 적에게 !D! 데미지를 가합니다. NL 전투당 한 번, 체력을 적 숫자 X !M! 만큼 회복합니다.",
+    "DESCRIPTION": "모든 적에게 !D! 데미지를 가합니다. NL 전투당 한 번, 체력을 적 숫자 x !M! 만큼 회복합니다.",
+    "UPGRADE_DESCRIPTION": "모든 적에게 !D! 데미지를 가합니다. NL 전투당 한 번, 체력을 적 숫자 x !M! 만큼 회복합니다.",
     "EXTENDED_DESCRIPTION" : [
       "마신 부단장",
-      "모든 적에게 !D! aigismod:관통 데미지를 가합니다. 전투당 한 번, 체력을 적 숫자 X !M! 만큼 회복합니다."
+      "모든 적에게 !D! aigismod:관통 데미지를 가합니다. 전투당 한 번, 체력을 적 숫자 x !M! 만큼 회복합니다."
     ]
   },
   "aigisMod:Martina": {
@@ -1837,8 +1837,8 @@
   },
   "aigisMod:Thelma": {
     "NAME": "텔마",
-    "DESCRIPTION": "2 취약을 부여합니다. NL 골드를 포션 수 X !M! 만큼 얻습니다. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "2 취약을 부여합니다. NL 골드를 포션 수 X !M! 만큼 얻습니다. NL 소멸.",
+    "DESCRIPTION": "2 취약을 부여합니다. NL 골드를 포션 수 x !M! 만큼 얻습니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "2 취약을 부여합니다. NL 골드를 포션 수 x !M! 만큼 얻습니다. NL 소멸.",
     "EXTENDED_DESCRIPTION" : [
       "연금술사"
     ]
@@ -2602,8 +2602,8 @@
   },
   "aigisMod:Pedra": {
     "NAME": "페도라",
-    "DESCRIPTION": "턴 종료시, 덱의 저주 개수 X 2 만큼 방어도를 넣습니다.",
-    "UPGRADE_DESCRIPTION": "체력을 5 회복합니다. NL 턴 종료시, 덱의 저주 개수 X 2 만큼 방어도를 넣습니다.",
+    "DESCRIPTION": "턴 종료시, 덱의 저주 개수 x 2 만큼 방어도를 넣습니다.",
+    "UPGRADE_DESCRIPTION": "체력을 5 회복합니다. NL 턴 종료시, 덱의 저주 개수 x 2 만큼 방어도를 넣습니다.",
     "EXTENDED_DESCRIPTION" : [
       "역점룡"
     ]
@@ -2628,17 +2628,17 @@
   },
   "aigisMod:Hakunokami": {
     "NAME": "하쿠노카미",
-    "DESCRIPTION": "턴 종료시, 모든 적의 체력을 디버프 스택 X !M! 만큼 감소시킵니다.",
-    "UPGRADE_DESCRIPTION": "체력을 8 회복시킵니다. NL 턴 종료시, 모든 적의 체력을 디버프 스택 X !M! 만큼 감소시킵니다.",
+    "DESCRIPTION": "턴 종료시, 모든 적의 체력을 디버프 스택 x !M! 만큼 감소시킵니다.",
+    "UPGRADE_DESCRIPTION": "체력을 8 회복시킵니다. NL 턴 종료시, 모든 적의 체력을 디버프 스택 x !M! 만큼 감소시킵니다.",
     "EXTENDED_DESCRIPTION" : [
       "고대룡",
-      "턴 종료시, 모든 적의 체력을 디버프 스택 X !M! 만큼 감소시킵니다."
+      "턴 종료시, 모든 적의 체력을 디버프 스택 x !M! 만큼 감소시킵니다."
     ]
   },
   "aigisMod:Echidna": {
     "NAME": "에키드나",
-    "DESCRIPTION": "턴 종료시, 모든 적의 체력을 덱의 저주 카드 개수 X !M! 만큼 감소시킵니다.",
-    "UPGRADE_DESCRIPTION": "턴 종료시, 모든 적의 체력을 덱의 저주 카드 개수 X !M! 만큼 감소시킵니다.",
+    "DESCRIPTION": "턴 종료시, 모든 적의 체력을 덱의 저주 카드 개수 x !M! 만큼 감소시킵니다.",
+    "UPGRADE_DESCRIPTION": "턴 종료시, 모든 적의 체력을 덱의 저주 카드 개수 x !M! 만큼 감소시킵니다.",
     "EXTENDED_DESCRIPTION" : [
       "용무녀"
     ]
@@ -2888,8 +2888,8 @@
   },
   "aigisMod:Elizabeth": {
     "NAME": "엘리자베스",
-    "DESCRIPTION": "손패에서 카드 1 장을 소멸시킬 수 있습니다. NL 방어도를 적의 수 X !B! 만큼 얻습니다.",
-    "UPGRADE_DESCRIPTION": "손패와 버린 카드 더미에서 카드 1 장을 소멸시킬 수 있습니다. NL 방어도를 적의 수 X !B! 만큼 얻습니다.",
+    "DESCRIPTION": "손패에서 카드 1 장을 소멸시킬 수 있습니다. NL 방어도를 적의 수 x !B! 만큼 얻습니다.",
+    "UPGRADE_DESCRIPTION": "손패와 버린 카드 더미에서 카드 1 장을 소멸시킬 수 있습니다. NL 방어도를 적의 수 x !B! 만큼 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
       "현상금 사냥꾼"
     ]
@@ -3213,16 +3213,16 @@
   },
   "aigisMod:Marsi": {
     "NAME": "마르시",
-    "DESCRIPTION": "방어도를 적의 수 X !B! 만큼 얻습니다. NL 뽑을 카드 더미 가장 아래에 어지러움을 1 장 추가합니다.",
-    "UPGRADE_DESCRIPTION": "방어도를 적의 수 X !B! 만큼 얻습니다. NL 뽑을 카드 더미 가장 아래에 어지러움을 1 장 추가합니다.",
+    "DESCRIPTION": "방어도를 적의 수 x !B! 만큼 얻습니다. NL 뽑을 카드 더미 가장 아래에 어지러움을 1 장 추가합니다.",
+    "UPGRADE_DESCRIPTION": "방어도를 적의 수 x !B! 만큼 얻습니다. NL 뽑을 카드 더미 가장 아래에 어지러움을 1 장 추가합니다.",
     "EXTENDED_DESCRIPTION" : [
       "잠수기사"
     ]
   },
   "aigisMod:Momo": {
     "NAME": "모모",
-    "DESCRIPTION": "!D! 데미지를 가합니다. NL 소멸된 상태이상 카드 X 2 만큼 방어도를 얻습니다. NL 손패에 1 어지러움을 얻습니다.",
-    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL 소멸된 상태이상 카드 X 2 만큼 방어도를 얻습니다. NL 손패에 1 어지러움을 얻습니다.",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL 소멸된 상태이상 카드 x 2 만큼 방어도를 얻습니다. NL 손패에 1 어지러움을 얻습니다.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL 소멸된 상태이상 카드 x 2 만큼 방어도를 얻습니다. NL 손패에 1 어지러움을 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
       "철갑투사",
       " NL (방어도를 !B! 얻습니다)"
@@ -3238,8 +3238,8 @@
   },
   "aigisMod:Xiao": {
     "NAME": "샤오",
-    "DESCRIPTION": "!D! aigismod:아쳐 데미지를 가합니다. NL 덱에 있는 파워 캐릭터 카드 X 2 만큼 추가 데미지를 입힙니다. NL aigismod:암살.",
-    "UPGRADE_DESCRIPTION": "!D! aigismod:아쳐 데미지를 가합니다. NL 덱에 있는 파워 캐릭터 카드 X 2 만큼 추가 데미지를 입힙니다. NL aigismod:암살.",
+    "DESCRIPTION": "!D! aigismod:아쳐 데미지를 가합니다. NL 덱에 있는 파워 캐릭터 카드 x 2 만큼 추가 데미지를 입힙니다. NL aigismod:암살.",
+    "UPGRADE_DESCRIPTION": "!D! aigismod:아쳐 데미지를 가합니다. NL 덱에 있는 파워 캐릭터 카드 x 2 만큼 추가 데미지를 입힙니다. NL aigismod:암살.",
     "EXTENDED_DESCRIPTION" : [
       "채화의 사수"
     ]
@@ -3459,11 +3459,11 @@
   },
   "aigisMod:Spiria": {
     "NAME": "스피리아",
-    "DESCRIPTION": "모든 적에게 1 aigismod:라이프링크를 부여합니다. NL 타켓은 모든 적들에 부여된 aigismod:라이프링크 스택 X !M! 데미지를 입습니다.",
-    "UPGRADE_DESCRIPTION": "모든 적에게 1 aigismod:라이프링크를 부여합니다. NL 모든 적들은 모든 적들에 부여된 aigismod:라이프링크 스택 X !M! 데미지를 입습니다.",
+    "DESCRIPTION": "모든 적에게 1 aigismod:라이프링크를 부여합니다. NL 타켓은 모든 적들에 부여된 aigismod:라이프링크 스택 x !M! 데미지를 입습니다.",
+    "UPGRADE_DESCRIPTION": "모든 적에게 1 aigismod:라이프링크를 부여합니다. NL 모든 적들은 모든 적들에 부여된 aigismod:라이프링크 스택 x !M! 데미지를 입습니다.",
     "EXTENDED_DESCRIPTION": [
       "혼쇄의 조정자",
-      "모든 적에게 1 aigismod:라이프링크를 부여합니다. NL 타켓은 모든 적들에 부여된 aigismod:라이프링크 스택 X !M! 데미지를 입습니다."
+      "모든 적에게 1 aigismod:라이프링크를 부여합니다. NL 타켓은 모든 적들에 부여된 aigismod:라이프링크 스택 x !M! 데미지를 입습니다."
     ]
   },
   "aigisMod:Daniela": {
