--- a/localization/kor/AigisMod-Keyword-Strings.json
+++ b/localization/kor/AigisMod-Keyword-Strings.json
@@ -18,7 +18,7 @@
       "Imperial_knight",
       "imperial_knight"
     ],
-    "DESCRIPTION": "#y한 #y턴에 #y한 #번씩, 이 카드가 손에 있는 상태에서 #y제국 카드를 사용할 때 효과를 발동합니다."
+    "DESCRIPTION": "#y한 #y턴에 #y한 #y번씩, 이 카드가 손에 있는 상태에서 #y제국 카드를 사용할 때 효과를 발동합니다."
   },
   {
     "PROPER_NAME": "데미지 아우라",
