--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -2237,8 +2237,8 @@
   },
   "aigisMod:Gratia": {
     "NAME": "그라티아",
-    "DESCRIPTION": "타격 카드를 사용할시, 모든 타격 카드의 효과가 1 상승합니다.",
-    "UPGRADE_DESCRIPTION": "이 전투에서 모든 타격 카드를 업그레이드합니다. NL 타격 카드를 사용할시, 모든 타격 카드의 효과가 1 상승합니다.",
+    "DESCRIPTION": "타격 카드를 사용할시, 모든 타격 카드의 데미지가 1 상승합니다.",
+    "UPGRADE_DESCRIPTION": "이 전투에서 모든 타격 카드를 업그레이드합니다. NL 타격 카드를 사용할시, 모든 타격 카드의 데미지가 1 상승합니다.",
     "EXTENDED_DESCRIPTION": [
       "제국 대장장이"
     ]
