--- a/localization/kor/AigisMod-Keyword-Strings.json
+++ b/localization/kor/AigisMod-Keyword-Strings.json
@@ -209,7 +209,7 @@
       "Cooldown",
       "cooldown"
     ],
-    "DESCRIPTION": "이 카드를 사용할 때마다 코스트가 #b1 감소합니다. 만약 코스트가 #b0 에 도달하면 추가 효과가 발동됩니다."
+    "DESCRIPTION": "이 카드를 사용할 때마다 수치가 #b1 감소합니다. 만약 수치가 #b0 에 도달하면 추가 효과가 발동됩니다."
   },
   {
     "PROPER_NAME": "페어",
