--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -2187,7 +2187,7 @@
   "aigisMod:Eleonora": {
     "NAME": "엘레오노라",
     "DESCRIPTION": "턴 종료시, 손패의 카드 1 장을 소멸시키고 인공물을 1 획득할 수 있습니다. (최대 !M! 번)",
-    "UPGRADE_DESCRIPTION": "소멸 all Status cards. NL 턴 종료시, 손패의 카드 1 장을 소멸시키고 인공물을 1 획득할 수 있습니다. (최대 !M! 번)",
+    "UPGRADE_DESCRIPTION": "모든 상태이상 카드를 소멸시킵니다. NL 턴 종료시, 손패의 카드 1 장을 소멸시키고 인공물을 1 획득할 수 있습니다. (최대 !M! 번)",
     "EXTENDED_DESCRIPTION" : [
       "제국 주교",
       "턴 종료시, 손패의 카드 1 장을 소멸시키고 인공물을 1 획득할 수 있습니다. (최대 !M! 번)"
